--- a/demo.html
+++ b/demo.html
@@ -273,6 +273,7 @@
             var initTableQuestion = function(t_question){
                 $("table").hide()
                 $("#t_question").show()
+                $("#t_question > tbody tr").remove()
                 console.log(t_question)
                 for (let [i,v] of t_question.entries()){
                     var line = i+1
@@ -281,9 +282,23 @@
                     var difficulty = v.difficulty
                     var uploader = v.uploader
                     var c_date = v.c_date
-                    var d_td = `<tr><td>${line}</td><td>${level}</td><td class="pointer">${title}</td><td>${difficulty}</td><td>${uploader}</td><td>${c_date}</td></tr>`
+                    var d_td = `<tr><td>${line}</td><td>${level}</td><td class="pointer prepare">${title}</td><td>${difficulty}</td><td>${uploader}</td><td>${c_date}</td></tr>`
                     $("#t_question > tbody").append(d_td)
                 }
+
+                $("#t_question .prepare").click(function(){
+                    console.log("prepare_click")
+                    $("#modal-question").modal("show")
+                })
+
+                $(".pointer").on("mouseover",function(){
+                    console.log("over")
+                    $(this).addClass("bg-info")
+                })
+                $(".pointer").on("mouseout",function(){
+                    console.log("out")
+                    $(this).removeClass("bg-info")
+                })
             }
 
             var initTable = function(t_audio){
@@ -360,15 +375,15 @@
                                 <input id="s-shadow" name="shadow" type="hidden">
                                 <input id="s-file_id" name="file_id" type="hidden">
                                 <div class="box-content">
-                                        <input id="file" name="file" class="up-image pointer" type="file">
-                                        <img class="box-img" src="">
-                                        <div class="box-text">
-                                            <p id="src-audio" class="hidden"></p>
-                                            <strong><p id="p-title" class="text-primary"></p></strong>
-                                            <p id="p-serifu" class="text-primary"></p>
-                                            <p id="p-roma" class="text-primary"></p>
-                                        </div>
+                                    <input id="file" name="file" class="up-image pointer" type="file">
+                                    <img class="box-img" src="">
+                                    <div class="box-text">
+                                        <p id="src-audio" class="hidden"></p>
+                                        <strong><p id="p-title" class="text-primary"></p></strong>
+                                        <p id="p-serifu" class="text-primary"></p>
+                                        <p id="p-roma" class="text-primary"></p>
                                     </div>
+                                </div>
                                     <div id="box-shadow" class="box-shadow">
                                         <div id="btn-play" class="box-img pointer"></div>
                                     </div>
@@ -407,6 +422,140 @@
             </div>
         </div>
     </div>
+<!-- modal end -->
+
+<div id="modal-question" class="modal fade bs-example-modal-lg" aria-hidden="true" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="to_list">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">编辑试题</h4>
+                </div>
+
+                    <div class="modal-body">
+                        <form id="que-form" class="form-horizontal" enctype="multipart/form-data">
+
+                            <div class="box-content">
+                                <div class="box-question-title">
+                                    <div class="form-group">
+                                        <label class="text-primary col-sm-2 control-label">标题:</label>
+                                        <div class="col-sm-9">
+                                            <input id="" name="" type="text" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="text-primary col-sm-2 control-label">备注:</label>
+                                        <div class="col-sm-4">
+                                            <input id="" name="" type="text" class="form-control">
+                                        </div>
+
+                                        <select class="form-control col-sm-3 go-level">
+                                                <option>--等级难度--</option>
+                                                <option>N2</option>
+                                                <option>N3</option>
+                                                <option>N4</option>
+                                                <option>N5</option>
+                                        </select>
+
+                                        <div class="btn-group" data-toggle="buttons">
+                                            <label class="btn btn-default">
+                                                <input type="radio" name="options" id="op-easy" autocomplete="off">容易
+                                            </label>
+                                            <label class="btn btn-default active">
+                                                <input type="radio" name="options" id="op-normal" autocomplete="off" checked>正常
+                                            </label>
+                                            <label class="btn btn-default">
+                                                <input type="radio" name="options" id="op-diff" autocomplete="off">困难
+                                            </label>
+                                        </div>
+
+                                    </div>
+                                    
+                                </div>
+                            </div>
+
+                            <hr>
+    <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-default">
+            <input type="radio" name="options" id="option1" autocomplete="off">全部预览
+        </label>
+        <label class="btn btn-default active">
+            <input type="radio" name="options" id="option2" autocomplete="off" checked>选择题
+        </label>
+        <label class="btn btn-default">
+            <input type="radio" name="options" id="option3" autocomplete="off">阅读题
+        </label>
+        <label class="btn btn-default">
+            <input type="radio" name="options" id="option4" autocomplete="off">听解题
+        </label>
+    </div>
+                            <hr>
+
+                        <div class="box-question">
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">编号:</label>
+                                <div class="col-sm-9">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">题目:</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">选项A:</label>
+                                <div class="col-sm-6">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                                <button type="button" class="btn btn-default col-sm-2">正解</button>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">选项B:</label>
+                                <div class="col-sm-6">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                                <button type="button" class="btn btn-default col-sm-2">正解</button>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">选项C:</label>
+                                <div class="col-sm-6">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                                <button type="button" class="btn btn-default col-sm-2">正解</button>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">选项D:</label>
+                                <div class="col-sm-6">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                                <button type="button" class="btn btn-default col-sm-2">正解</button>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">正解:</label>
+                                <div class="col-sm-9">
+                                    <input id="" name="" type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="text-primary col-sm-2 control-label">解析:</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" rows="3"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div><!-- box-question end -->
+                <div class="box-question">
+                    <button type="button" class="btn btn-info">下一题</button>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button id="btn-save" type="button" class="btn btn-primary">保存</button>
+                </div>
+        </div>
+    </div>
+</div>
 <!-- modal end -->
 
     <hr>
@@ -465,7 +614,7 @@
                     <th>#</th>
                     <th>level</th>
                     <th>title</th>
-                    <th>difficulty(0.0~0.9)</th>
+                    <th>difficulty</th>
                     <th>uploader</th>
                     <th>c_date</th>
                 </tr>
